--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-css-cookie-clicker",
+  "name": "css-cookie-clicker",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "description": "",
